2008-02-15  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/settings.cpp:
		Added "versioned" config file and format adaption.

2008-02-10  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcut.cpp:
	* src/settings.cpp:
	* src/settings.h:
		Fixed bug with 'lastdir' & toplevel directories 
		under Windows and implemented possibility to use 
		a fixed 'lastdir'.
		Added *.trp to recognized files.

2008-02-04  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
		Install manpages to $PREFIX/share/man.

	* src/dvbcut.cpp:
	* src/tsfile.cpp:
		#include <algorithm>.

2008-01-16  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/psfile.cpp:
		Speed up PS probing.

2008-01-06  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcutbase.ui:
	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/settings.cpp:
	* src/settings.h:
		Automated setting of equidistant chapter markers.
		Fixed bug concerning positioning via output frames.

2007-12-12  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcutbase.ui:
	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/main.cpp:
		Added 4:3 & 16:9 bookmark conversion to GUI & CLI.
		Additional -cut & -automarker CLI switches.

2007-12-08  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcut.cpp:
		Added format option to <expfile>-tag of project files.
		Fixed a chapterlist bug.

	* src/settings.cpp:
		Empty defaults for pipe settings.
				
2007-12-06  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)
  
	* src/settings.cpp:
	* src/settings.h:
	* src/dvbcut.cpp:
	* src/dvbcut.h:
		New recent files format which allows for storing
		multiple input files.

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/main.cpp:
		Input file names can come before CLI switches.
		New -format switch.

2007-12-06  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/settings.cpp:
	* src/settings.h:
		New pipe command settings.

	* src/dvbcut.cpp:
		Improved pipe command.
 